--- a/.gitmodules
+++ b/.gitmodules
@@ -1,88 +1,84 @@
 [submodule "layers/poky"]
 	path = layers/poky
 	url = https://github.com/MontaVista-OpenSourceTechnology/poky.git
-	branch = dunfell
+	branch = hardknott
 [submodule "layers/meta-openembedded"]
 	path = layers/meta-openembedded
 	url = https://github.com/MontaVista-OpenSourceTechnology/meta-openembedded.git
-	branch = dunfell
+	branch = hardknott
 [submodule "layers/meta-clang"]
 	path = layers/meta-clang
 	url = https://github.com/MontaVista-OpenSourceTechnology/meta-clang.git
-	branch = dunfell
+	branch = hardknott
 [submodule "layers/meta-virtualization"]
 	path = layers/meta-virtualization
 	url = https://github.com/MontaVista-OpenSourceTechnology/meta-virtualization.git
-	branch = dunfell 
+	branch = hardknott 
 [submodule "layers/meta-montavista-cgx"]
 	path = layers/meta-montavista-cgx
-	url = https://github.com/MontaVista-OpenSourceTechnology/meta-montavista-cgx.git 
-	branch = dunfell
+	url = https://github.com/MontaVista-OpenSourceTechnology/meta-montavista-cgx.git
+    branch = hardknott
 [submodule "layers/meta-selinux"]
 	path = layers/meta-selinux
 	url = https://github.com/MontaVista-OpenSourceTechnology/meta-selinux.git
-    branch = dunfell 
+    branch = hardknott 
 [submodule "layers/meta-security"]
 	path = layers/meta-security
 	url = https://github.com/MontaVista-OpenSourceTechnology/meta-security.git
-	branch = dunfell
+	branch = hardknott
 [submodule "layers/meta-cgl"]
 	path = layers/meta-cgl
 	url = https://github.com/MontaVista-OpenSourceTechnology/meta-cgl.git
-	branch = dunfell 
+	branch = hardknott 
 [submodule "layers/meta-cloud-services"]
 	path = layers/meta-cloud-services
 	url = https://github.com/MontaVista-OpenSourceTechnology/meta-cloud-services.git
-	branch = dunfell
+	branch = hardknott
 [submodule "layers/meta-montavista-cgl"]
 	path = layers/meta-montavista-cgl
 	url = https://github.com/MontaVista-OpenSourceTechnology/meta-montavista-cgl
-	branch = dunfell 
+    branch = hardknott
 [submodule "layers/meta-qa"]
 	path = layers/meta-qa
 	url = https://github.com/MontaVista-OpenSourceTechnology/meta-qa.git
-	branch = dunfell
+    branch = hardknott
 [submodule "layers/meta-updater"]
 	path = layers/meta-updater
 	url = https://github.com/MontaVista-OpenSourceTechnology/meta-updater
-	branch = dunfell
 [submodule "layers/meta-arm"]
 	path = layers/meta-arm
 	url = https://github.com/MontaVista-OpenSourceTechnology/meta-arm
-	branch = dunfell
+	branch = hardknott
 [submodule "layers/meta-freescale"]
 	path = layers/meta-freescale
 	url = https://github.com/MontaVista-OpenSourceTechnology/meta-freescale
-	branch = dunfell
+	branch = hardknott
 [submodule "layers/meta-freescale-3rdparty"]
 	path = layers/meta-freescale-3rdparty
 	url = https://github.com/MontaVista-OpenSourceTechnology/meta-freescale-3rdparty
-	branch = dunfell
+	branch = hardknott
 [submodule "layers/meta-raspberrypi"]
 	path = layers/meta-raspberrypi
 	url = https://github.com/MontaVista-OpenSourceTechnology/meta-raspberrypi
-	branch = dunfell
+	branch = hardknott
 [submodule "layers/meta-rtlwifi"]
 	path = layers/meta-rtlwifi
 	url = https://github.com/MontaVista-OpenSourceTechnology/meta-rtlwifi
-	branch = dunfell
 [submodule "layers/meta-intel"]
 	path = layers/meta-intel
 	url = https://github.com/MontaVista-OpenSourceTechnology/meta-intel
-	branch = dunfell
+	branch = hardknott
 [submodule "layers/meta-xilinx"]
 	path = layers/meta-xilinx
 	url = https://github.com/MontaVista-OpenSourceTechnology/meta-xilinx
-	branch = dunfell
 [submodule "layers/meta-xilinx-tools"]
 	path = layers/meta-xilinx-tools
 	url = https://github.com/MontaVista-OpenSourceTechnology/meta-xilinx-tools
-	branch = dunfell
 [submodule "layers/meta-lmp"]
 	path = layers/meta-lmp
 	url = https://github.com/foundriesio/meta-lmp
-	branch = dunfell
+    branch = master-next
 [submodule "layers/meta-riscv"]
 	path = layers/meta-riscv
 	url = https://github.com/MontaVista-OpenSourceTechnology/meta-riscv
-	branch = dunfell
+	branch = hardknott
